Cleaner chromium flags

--- a/chromium/.config/chromium-flags.conf
+++ b/chromium/.config/chromium-flags.conf
@@ -46,9 +46,6 @@
 # Avoid DPI detection
 --force-device-scale-factor=1
 
-# Prevent precise fingerprinting
---disable-reading-from-canvas
-
 # Disable web service for spelling (local suggestions allowed)
 --enable-spelling-auto-correct
 --use-spelling-suggestions
@@ -70,7 +67,8 @@
 --no-pings
 
 # Limit fingerprinting
---disable-reading-from-canvas
+# disabling the canvas breaks vnc / imgur / lots of websites
+#--disable-reading-from-canvas
 --disable-webgl
 --disable-webaudio
 --disable-web-resources
