--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -53,7 +53,7 @@ font-3 = "Knack Nerd Font:pixelsize=24;4"
 
 modules-left = i3
 modules-center = 
-modules-right = volume filesystem backlight-acpi temperature cpu memory date wlan pkg menu0
+modules-right = volume battery filesystem xbacklight temperature cpu memory date wlan pkg menu0
 
 tray-position = right
 tray-padding = 0
@@ -140,7 +140,7 @@ ws-icon-default = %{T3}%{T-}
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
-label-mode-padding = 2
+label-mode-padding = 10
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
@@ -163,6 +163,7 @@ label-visible-padding = 2
 ; urgent = Workspace with urgency hint set
 label-urgent = %icon%
 #label-urgent-background = ${module/bspwm.label-urgent-background}
+label-urgent-underline = ${colors.primary}
 label-urgent-padding = 2
 
 [module/mpd]
@@ -181,34 +182,8 @@ label-song-ellipsis = true
 [module/xbacklight]
 type = internal/xbacklight
 
-output = LVDS
+output = eDP1
 
-;format = <label> <bar>
-format = <label> 
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
-
-[module/backlight-acpi]
-;inherit = module/xbacklight
-type = internal/backlight
-card = acpi_video0
-enable-scroll = true
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
-;   <bar>
-output = LVDS
 format = <ramp>
 ;format = <label>
 ;format = <ramp> <bar>
@@ -277,7 +252,7 @@ format-underline = ${colors.secondary}
 ;   <label> (default)
 ;   <bar-used>
 ;   <bar-free>
-format =  <bar-used>
+format =  %{A1:termite -e 'htop' &:}<bar-used>%{A-}
 
 ; Available tokens:
 ;   %percentage_used% (default)
@@ -372,7 +347,7 @@ type = internal/volume
 format-volume-padding = 1
 format-muted-padding = 1
 
-format-volume = <ramp-volume> <bar-volume>
+format-volume = %{A3:gnome-alsamixer&:}<ramp-volume> <bar-volume>%{A-}
 ;format-volume = <bar-volume>
 
 ramp-volume-0 = "%{T2}%{T-}"
@@ -423,30 +398,68 @@ battery = BAT0
 adapter = ADP1
 full-at = 98
 
+; see "man date" for details on how to format the time string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+; Default: %H:%M:%S
+time-format = %H:%M
+
+; Available tags:
+;   <label-charging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-charging>
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
 
+; Available tags:
+;   <label-discharging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+; Available tags:
+;   <label-full> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;format-full = <ramp-capacity> <label-full>
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
+; Available tokens:
+;   %percentage% (default)
+;   %time%
+;   %consumption% (shows current charge rate in watts)
+label-charging = %percentage%%
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
+; Available tokens:
+;   %percentage% (default)
+;   %time%
+;   %consumption% (shows current discharge rate in watts)
+label-discharging = %percentage%%
+
+; Available tokens:
+;   %percentage% (default)
+label-full = %percentage%%
+
+; Only applies if <ramp-capacity> is used
+ramp-capacity-0 = %{F#ec5f67}%{F-}
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+; Only applies if <bar-capacity> is used
+bar-capacity-width = 10
+
+; Only applies if <animation-charging> is used
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+; Framerate in milliseconds
 animation-charging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
-thermal-zone = 0
+thermal-zone = 1
 warn-temperature = 90
 
 ;format = <ramp> <label>
